--- a/config.css
+++ b/config.css
@@ -11,7 +11,11 @@
 body
 {
     color: black;
-    margin: 20px;
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    
 
     font-family: "Kode Mono", monospace;
     font-optical-sizing: auto;
@@ -21,15 +25,16 @@ body
 
 header
 {
+    text-align: center;
     margin-bottom: 10px;
     text-decoration: none;
+    font-size: 300%;
 }
-
 
 
 a
 {
-    display: inline-block;
+
     text-decoration: none;
     color: white;
     background-color: black;
@@ -37,7 +42,7 @@ a
 
 a:hover
 {
-    display: inline-block;
+
     text-decoration: none;
     color: black;
     background-color: white;
@@ -56,18 +61,36 @@ footer
     margin-bottom: 10px;
 }
 
-/*
+
+
+li 
+{
+  display: inline;
+ 
+}
+
+img
+{
+    width: 100%; 
+}
+
+video
+{
+    width: 100%; 
+}
+
 audio
 {
-    color: white;
-    background-color: black;
-    border-radius: 0;
-    box-align: center;
+    height: 10x;
+    align-items: center;
 }
-*/
 
-ul
+h3
 {
-    margin:10px;
-    margin-left: 40px;
+    display: inline;
+}
+
+th, td 
+{
+  text-align: center;
 }
