--- a/config.css
+++ b/config.css
@@ -1,10 +1,30 @@
 @import url("https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap");
 
+@media only screen and (max-width: 600px) 
+{
+
+  body 
+  {
+    align-content: center;
+  }
+
+  main {
+    text-align: center;
+  }
+
+  a.img{
+    width: 50%;
+  }
+}
+
+
+
 *
 {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     margin: 0px;
     padding: 0px;
+
 }
 
 
@@ -38,14 +58,6 @@ a
     text-decoration: none;
     color: white;
     background-color: black;
-}
-
-a:hover
-{
-
-    text-decoration: none;
-    color: black;
-    background-color: white;
 }
 
 
@@ -87,7 +99,11 @@ audio
 
 h3
 {
+    font-size: 30px;
     display: inline;
+    position:sticky;
+    top: 0px;
+    left: 0px;
 }
 
 th, td 
