--- a/config.css
+++ b/config.css
@@ -79,6 +79,10 @@ li, ul
 
 
 
+
+
+
+
 section{
 
   width: 100%;
@@ -111,7 +115,31 @@ img{
 
 
 
+section figureh {
+  max-width: 1000px;
+}
 
+section figureh img
+{ 
+    width: 100%;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    height: fit-content;
+}
+
+
+
+
+
+
+
+
+
+
+iframe{
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
 
 video
 {
@@ -176,19 +204,20 @@ figcaption {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 20px;
+  gap: 5px;
+  margin-bottom: 20px;
 }
 
 .gallery-item {
-  margin: 10px;
+  
   text-decoration: none;
 }
 
 .gallery-item img {
-  width: 300px;
-  height: 300px;
+  width: 550px;
+  height: 550px;
+  max-width: 100%;
   object-fit: cover;
-  border-radius: 10px;
   cursor: pointer;
   transition: transform 0.3s ease;
 }
@@ -203,10 +232,30 @@ figcaption {
 
 
 
+
+
+@media only screen and (max-width: 900px) 
+{
+  body 
+  {
+    align-content: center;
+  }
+
+  nav {
+    text-align: center;
+  }
+
+
+  section figure {
+    flex-basis: 48%;
+  }
+}
+
 @media only screen and (max-width: 600px) 
 {
   body 
   {
+    background-color: black;
     align-content: center;
   }
 
