--- a/config.css
+++ b/config.css
@@ -215,7 +215,7 @@ figcaption {
 
 .gallery-item img {
   width: 550px;
-  height: 550px;
+  height: 400px;
   max-width: 100%;
   object-fit: cover;
   cursor: pointer;
@@ -249,6 +249,16 @@ figcaption {
   section figure {
     flex-basis: 48%;
   }
+
+  .gallery-item img {
+    width: 550px;
+    height: 400px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+  }
+
+
 }
 
 @media only screen and (max-width: 600px) 
@@ -266,5 +276,13 @@ figcaption {
 
   section figure {
     flex-basis: 100%;
+  }
+
+  .gallery-item img {
+    width: 550px;
+    height: 200px;
+    object-fit: cover;
+    cursor: pointer;
+    transition: transform 0.3s ease;
   }
 }
